2010-04-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectFileCollection.cs: Properly
	  check for child files.

	* MonoDevelop.Core/FileService.cs: Added CanonicalPath
	  property.

2010-04-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Execution/ProcessService.cs: Fix build.

2010-04-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Execution/ProcessService.cs: Added null
	  check on the result of the external console handler.

2010-04-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs:
	  Report a better error when there are two projects with the
	  same guid. Fixes bug #545285 - When opening another
	  solution, sometimes i got an error.

2010-04-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs: Use
	  the new LoadClass method, which takes into account that the
	  entry may already have been loaded. Fixes bug #586574 - Goto
	  Type dialog throws a NullReferenceException.

	* MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Simplified ReadClass. The new LoadClass assigns the loaded
	  class and returns the existing class if it was already
	  loaded. Also, don't unload classes which have not been
	  saved.

2010-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CompilationUnit.cs: ShortenTypeName
	  now handles inner types.

2010-04-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CompilationUnit.cs:
	* MonoDevelop.Projects.Dom/ICompilationUnit.cs: Added Tag to
	  compilation unit (to hold the original compilation unit).

2010-04-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/LocalVariable.cs: Handled possible
	  null ref.

2010-04-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: